(04/14/08)
*** Constant interning - this reduces the number of datasets for local values
    created, especially when constants are used in loops.

(03/26/08)
*** String literals now use \ as escape character - for example, use \"
    to insert a quote into a string literal. Where \ was previously used
    in a string literal, it is now necessary to escape it as \\

(03/25/08)

*** Logging performance improvement in wrapper.sh

(03/15/08)
*** Unused lrc field in site catalog removed.

*** url field in site catalog execute element is now optional.

(03/13/08)

*** Swift v0.4 built from Swift SVN r1718 and cog SVN r1934.

(03/03/08)
*** Stage out wrapper log files in a similar fashion to kickstart records.

(02/28/08)
*** Progress ticker on stderr every 10..60 seconds

*** Store kickstart records in a subdirectory with the same base name as
    is used for log files.

(02/27/08)
*** SwiftScript source file line numbers are now passed deeper into the
    compiler in order to give location information in more error messages.
    This has resulted in a schema change for the XML intermediate form.

(02/26/08)
*** Better compile-time checking of variable usage. Use of undeclared
    variables and multiple assignments to the same variable will now result
    in a compile-time error (close to the start of a run), rather than an
    error during execution (which may be many hours later).

(01/25/08)
*** @arg now takes a second optional argument which stands for a default
    value in case the command line argument is missing.

(01/14/08)
*** Overloaded '+' operator to allow string concatenation

(01/05/08)
*** Multidimensional array handling. Can now declare arrays like this:
       file f[][];
    and refer to elements like this:
       f[1][1]
    f[1] refers to a one dimensional array, in the style of Java arrays.

(12/18/07)
*** r1214 made type specification illegal in a foreach but still recognised it