@@ -1,3 +1,8 @@
+(04/14/24)
+*** PATHPREFIX environment variable is prefixed to the path before execution
+    in wrapper.sh; this variable can be set in profile entries using the usual
+    environment variables
+
 (04/14/08)
 *** Constant interning - this reduces the number of datasets for local values
     created, especially when constants are used in loops.
